<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.application.tak.takapplication.actStudentLogin$PlaceholderFragment">

    <ScrollView
            android:id="@+id/login_form2"
            android:layout_width="match_parent"
            android:layout_height="430dp" tools:ignore="UselessParent">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
    <!-- Login progress -->
            <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_below="@+id/imageView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_weight="0.26" android:layout_marginTop="80dp"
            tools:ignore="ObsoleteLayoutParam,UnknownIdInLayout" android:layout_height="wrap_content">
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="342dp" tools:ignore="NestedScrolling">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:layout_marginLeft="25dp" android:layout_marginRight="10dp"
                tools:ignore="RtlHardcoded">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <AutoCompleteTextView
                        android:id="@+id/imie"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="Imię"
                        android:maxLines="1"
                        tools:ignore="HardcodedText"/>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"  android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <AutoCompleteTextView
                        android:id="@+id/nazwisko"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="Nazwisko"
                        android:maxLines="1"
                        tools:ignore="HardcodedText"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"  android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <AutoCompleteTextView
                        android:id="@+id/customrtUlica"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/customerulica"
                        android:maxLines="1"
                />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"  android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <AutoCompleteTextView
                        android:id="@+id/customerMiasto"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/customermiasto"
                        android:maxLines="1"
                />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"  android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <AutoCompleteTextView
                        android:id="@+id/txtNewCustomerPostcode"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/customerkodpocztowy"
                        android:maxLines="1"
                />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"  android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
    </android.support.v7.widget.CardView>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/edituser"
                    android:id="@+id/imageView2" android:layout_below="@+id/login_progress"
                    android:layout_centerHorizontal="true" tools:ignore="ContentDescription,UnknownIdInLayout"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
