<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.application.tak.takapplication.actStudentLogin$PlaceholderFragment">

    <ScrollView
            android:id="@+id/login_form2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="UselessParent" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:id="@+id/cvLoginDetailsStudent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="330dp" tools:ignore="NestedScrolling">

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_marginLeft="30dp" android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" android:layout_marginBottom="0dp" android:layout_marginEnd="15dp"
                    tools:ignore="RtlHardcoded">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <AutoCompleteTextView
                            android:id="@+id/imie"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="Imię"
                            android:maxLines="1"
                            tools:ignore="HardcodedText"/>


                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <AutoCompleteTextView
                            android:id="@+id/nazwisko"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="Nazwisko"
                            android:maxLines="1"
                            tools:ignore="HardcodedText"/>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <AutoCompleteTextView
                            android:id="@+id/szkola_student"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="Szkoła"
                            android:maxLines="1"
                            android:inputType="text"
                            tools:ignore="HardcodedText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <AutoCompleteTextView
                            android:id="@+id/Miasto_student"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="Miasto"
                            android:inputType="text"
                            android:maxLines="1"
                            tools:ignore="HardcodedText"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <AutoCompleteTextView
                            android:id="@+id/telefon_student"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:hint="Telefon"
                            android:inputType="phone"
                            android:maxLines="1"
                            tools:ignore="HardcodedText"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp" android:layout_marginLeft="30dp" android:layout_marginRight="30dp">

                    <EditText
                            android:id="@+id/email_student"
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:hint="Email"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            tools:ignore="HardcodedText"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:contentDescription=""
            android:layout_below="@+id/section_label" android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/student" tools:ignore="ContentDescription"/>
            <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krok_3_uzupe_nij_szczeg_y"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="11dp" android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"/>
            <android.support.design.widget.FloatingActionButton
                    android:layout_width="80dp"
                    android:clickable="true"
                    app:fabSize="mini" app:srcCompat="@drawable/cooltext242812233487143"
                    android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" android:layout_marginRight="14dp"
                    android:layout_marginEnd="14dp" android:id="@+id/fabGoToStudentTaSK_old"
                    android:layout_height="80dp"/>
        </RelativeLayout>
</ScrollView>
    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:text="@string/akceptuje_regulamin"
            style="@style/AppTheme"
            android:layout_below="@+id/login_form2" android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"/>
</RelativeLayout>